# casket

./: .gitignore  CHANGELOG.md  POST_V01.md  README.md  pyproject.toml
casket/: __init__.py  cli.py  compare.py  epss.py  findings.py  oci.py  osv.py  podman_mode.py  remote_mode.py  rules.py  scanner.py  summary.py  vex.py
casket/checks/: __init__.py  creds.py  cves.py  misconfig.py
casket/ruledata/: creds.yaml  misconfig.yaml  osv-seed.json
tests/: build_fixtures.py  conftest.py  test_checks.py  test_cli_e2e.py  test_compare.py  test_creds_rules.py  test_cvss_floor.py  test_epss.py  test_fail_on.py  test_fix_available.py  test_group_by_package.py  test_install_sanity.py  test_layer_command.py  test_min_severity.py  test_oci.py  test_osv_cache.py  test_osv_enrichment.py  test_osv_fixed_version.py  test_podman_mode.py  test_purl_filter.py  test_remote_mode.py  test_sarif.py  test_stats.py  test_summary.py  test_suppress_ecosystem.py  test_suppress_severity.py  test_vex.py  test_wheel_ship_gate.py
tests/fixtures/: alpine-clean-image.tar  alpine-edge-image.tar  alpine-edge-prerelease-image.tar  alpine-image.tar  alpine-release-image.tar  debian-osrelease-image.tar  debian-release-image.tar  history-image.tar  leaky-image.tar  old-package.tar  ports-image.tar  rootuser-image.tar  rpm-clean-image.tar  rpm-image.tar  rpm-legacy-image.tar
