[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "casket"
version = "0.1.0"
description = "A daemonless, podman-native container image scanner. No Docker, no daemon, no root."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "bugsyhewitt" }]
keywords = ["security", "container", "oci", "podman", "scanner", "cve", "secrets"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    # casket's test modules import these at collection time.
    # Listing them in [dev] means `pip install -e ".[dev]"` is
    # enough for `pytest -q` to collect without ModuleNotFoundError.
    # See tests/test_install_sanity.py for the regression gate.
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
casket = "casket.cli:main"

[project.urls]
Homepage = "https://github.com/bugsyhewitt/casket"

[tool.setuptools]
packages = ["casket", "casket.checks", "casket.ruledata"]

[tool.setuptools.package-data]
"casket.ruledata" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
markers = [
    "install_sanity: v0.1 fresh-venv install contract (runs `pip install -e .[dev]`; safe but slow)",
]
testpaths = ["tests"]
addopts = "-q"
